2007-10-09  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginmanager-restore.c
	(gimp_plug_in_manager_add_from_rc): changed message about missing
	executable and only output it if gimp is verbose.

2007-10-09  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpnumberpairentry.c: fixed ambiguous gtk-doc
	comment.

2007-10-09  Sven Neumann  <sven@gimp.org>

	* app/base/Makefile.am
	* app/base/tile.[ch]
	* app/base/tile-rowhints.[ch]: moved tile row hints code to its
	own file.
	
	* app/base/tile-cache.c
	* app/base/tile-manager.c
	* app/base/tile-swap.c
	* app/paint-funcs/paint-funcs.c: changed accordingly.

2007-10-09  Sven Neumann  <sven@gimp.org>

	* app/core/gimpitem.c
	* app/tools/gimprectangletool.c
	* app/tools/tools-utils.c: fixed ambiguous gtk-doc comments.

2007-10-09  Sven Neumann  <sven@gimp.org>

	* app/base/tile-pyramid.c (tile_pyramid_write_quarter): optimized
	the rendering of fully opaque regions.

2007-10-09  Sven Neumann  <sven@gimp.org>

	* app/base/tile.[ch]
	* app/paint-funcs/paint-funcs.c: moved code to update tile row
	hints to tile.[ch].

2007-10-09  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimphelpui.c (gimp_help_connect): pass canonical
	signal names to gtk_binding_entry_add_signal().

2007-10-09  Sven Neumann  <sven@gimp.org>

	* app/actions/window-commands.c: specify alternative button order.

2007-10-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c: removed an obsolete comment.

2007-10-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactionview.c
	* app/widgets/gimphelp.c: specify alternative button order for
	message dialogs.

	* app/dialogs/user-install-dialog.c: removed trailing whitespace.

2007-10-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpperspectiveclonetool.c: implement button_release
	and stop the draw tool when in adjust mode. Fixes bug #483912.

	(gimp_perspective_clone_tool_mode_notify): start the draw tool.

2007-10-08  Sven Neumann  <sven@gimp.org>
